--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -7,7 +7,6 @@
   font-family: 'Helvetica-Bold', Arial;
   border-bottom: solid 1px $red;
   padding-bottom: .5em;
-
 }
 
 .product h2 {
@@ -86,6 +85,10 @@ div.applications ul li {
 
 #specifications {
   font-size: .9em;
+
+  li {
+    list-style: disc;
+  }
 }
 
 .detail-box table {
