--- a/app/views/applications/flooring.html.erb
+++ b/app/views/applications/flooring.html.erb
@@ -3,17 +3,17 @@
 <section class="main-section group">
 	<img class="main-pic" src="/applications/flooring/flooring-main.png" alt="flooring Muro tools application">
 	<div class="description">
-		<h3 class="catch-phrase">Forget about squeaky floors and potential call backs, our 
-Auto-Feed Screw Driving Systems will fasten your subfloor 
-with ease.
+		<h3 class="catch-phrase">Forget about squeaky floors and potential call backs, our
+Auto-Feed Screw Driving Systems will fasten your subfloor
+and underlayment with ease.
 </h3>
-			<ul class="highlights">
-				<li>Fasten subfloor down while standing up with a single push.</li>
-				<li>Our tools can screw down large surface areas on your jobsite in minutes.</li>
-				<li>No need to hold screws anymore, load your tool with Muro collated fasteners and you’re good to go.</li>
-				<li>Once you see how easy and fast it is to do subflooring with our tools you’ll never go back to the old way again.</li>
-				<li>Industrial strength for the discriminating Contractor or do-it-yourself home owner.</li>
-			</ul>
+		<ul class="highlights">
+			<li>Fasten subfloor down while standing up with a single push.</li>
+			<li>Screw down large surface areas on your jobsite in minutes.</li>
+			<li>Fast and efficient, load your tool with Muro collated fasteners and you’re good to go.</li>
+			<li>Makes flooring fastening simple and easy you’ll never go back to the old way again.</li>
+			<li>Used by professional contractors or do-it-yourself home owners.</li>
+		</ul>
 	</div>
 
 </section>
@@ -31,9 +31,9 @@ with ease.
 	<article>
 		<a href=""><img src="/applications/flooring/ultra-pro.png" alt="Ultra Pro Driver Auto Feed Screw Driver with Handle"></a>
 		<div>
-			<h4><a href="">CH7392SF - Ultra Pro Screwdriver 
+			<h4><a href="">CH7392SF - Ultra Pro Screwdriver
 </a></h4>
-			<p>A lightning fast alternative 
+			<p>A lightning fast alternative
 (4000 rpm motor) rivals the speed of nailing while providing significantly greater job quality and satisfaction for everyone.<strong><a href=""> Find out more.</a></strong></p>
 		</div>
 	</article>
