--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -26,7 +26,7 @@
 	    </section>
 
 	    <section id="links-row" class="group">
-			
+
 			<a href="tools.html"><img class="tools no-margin-left" src="home/tools-link.jpg" alt="View Tools Page"></a>
 			<a href="screws.html"><img class="screws" src="home/screws-link.jpg" alt="View Screws"></a>
 			<a href="accessories/"><img class="accessories" src="home/accessories-link.jpg" alt="View our accessories"></a>
@@ -35,16 +35,16 @@
 			<a href="videos.html"><img class="videos" src="home/videos-link.jpg" alt="View our videos page"></a>
 
 	    </section>
-		
+
 		<section id="news" class="group">
 			<article class="no-margin-left">
-				
+
 				<a href=""><img src="home/what-trades-want.jpg" alt="Review video done by What Trades Want"></a>
 
 				<div class="written">
 					<h3><a href="">What Trades Want</a></h3>
 					<p>
-						The boys over at What Trades Want have done a review of our collated auto-feed screw guns in action. They test out a couple of our guns to see how they perform on a variety of surfaces. Click on the video to see them in action.
+						The boys over at What Trades Want did a review of our collated auto-feed screw guns in action. They test out a couple of our tools to see how they perform in a variety of applications.
 					</p>
 				</div>
 			</article>
