--- a/app/views/products/tools/index.html.erb
+++ b/app/views/products/tools/index.html.erb
@@ -4,46 +4,46 @@
 
 <div class="selection tool">
   <a href="<%= products_tool_path(:id=>1) %>"><img src="/products/tools/index/ultra-driver.png" alt="CH7390 - Ultra Driver"></a>
-  <%= link_to "CH7390 - Ultra Driver", products_tools_path %>
+  <%= link_to "CH7390 - Ultra Driver", products_tool_path(:id=>1) %>
 </div>
 
 <div class="selection tool">
-  <a href="<%= products_tools_path %>"><img src="/products/tools/index/easy-driver.png" alt="CH7241 -  Easy Driver"></a>
-  <%= link_to "CH7241 -  Easy Driver", products_tools_path %>
+  <a href="<%= products_tool_path(:id=>2) %>"><img src="/products/tools/index/easy-driver.png" alt="CH7241 -  Easy Driver"></a>
+  <%= link_to "CH7241 -  Easy Driver", products_tool_path(:id=>2)  %>
 </div>
 
 <div class="selection tool">
-  <a href="<%= products_tools_path %>"><img src="/products/tools/index/metal-pro-tool.png" alt="CH7260 - Metal Pro Tool"></a>
-  <%= link_to "CH7260 - Metal Pro Tool", products_tools_path %>
+  <a href="<%= products_tool_path(:id=>3) %>"><img src="/products/tools/index/metal-pro-tool.png" alt="CH7260 - Metal Pro Tool"></a>
+  <%= link_to "CH7260 - Metal Pro Tool", products_tool_path(:id=>3) %>
 </div>
 <div class="selection tool">
-  <a href="<%= products_tools_path %>"><img src="/products/tools/index/power-driver.png" alt="FLVL41 - Power Driver"></a>
-  <%= link_to "FLVL41 - Power Driver", products_tools_path %>
-</div>
-
-<div class="selection tool">
-  <a href="<%= products_tools_path %>"><img src="/products/tools/index/speed-driver.png" alt="FDVL41 - Speed Driver"></a>
-  <%= link_to "FLVL41 - Power Driver", products_tools_path %>
+  <a href="<%= products_tool_path(:id=>4) %>"><img src="/products/tools/index/power-driver.png" alt="FLVL41 - Power Driver"></a>
+  <%= link_to "FLVL41 - Power Driver", products_tool_path(:id=>4) %>
 </div>
 
 <div class="selection tool">
-  <a href="<%= products_tools_path %>"><img src="/products/tools/index/heavy-duty-driver.png" alt="HDVL71 - Heavy Duty Driver"></a>
-  <%= link_to "HDVL71 - Heavy Duty Driver", products_tools_path %>
+  <a href="<%= products_tool_path(:id=>5) %>"><img src="/products/tools/index/speed-driver.png" alt="FDVL41 - Speed Driver"></a>
+  <%= link_to "FDVL41 - Speed Driver", products_tool_path(:id=>5) %>
 </div>
 
 <div class="selection tool">
-  <a href="<%= products_tools_path %>"><img src="/products/tools/index/lwvl32.png" alt="LWVL32 - Coil Hex Auto Feed System"></a>
-  <%= link_to "LWVL32 - Coil Hex Auto Feed System", products_tools_path %>
+  <a href="<%= products_tool_path(:id=>6) %>"><img src="/products/tools/index/heavy-duty-driver.png" alt="HDVL71 - Heavy Duty Driver"></a>
+  <%= link_to "HDVL71 - Heavy Duty Driver",  products_tool_path(:id=>6) %>
 </div>
 
 <div class="selection tool">
-  <a href="<%= products_tools_path %>"></a><img src="/products/tools/index/lhvl32.png" alt="LHVL32 - Coil Auto Feed">
-  <%= link_to "LHVL32 - Coil Auto Feed", products_tools_path %>
+  <a href="<%= products_tool_path(:id=>7) %>"><img src="/products/tools/index/lwvl32.png" alt="LWVL32 - Coil Hex Auto Feed System"></a>
+  <%= link_to "LWVL32 - Coil Hex Auto Feed System", products_tool_path(:id=>7) %>
 </div>
 
 <div class="selection tool">
-  <a href="<%= products_tools_path %>"><img src="/products/tools/index/vl62.png" alt="VL62 - Series of Tools"></a>
-  <%= link_to "VL62 - Series of Tools", products_tools_path %>
+  <a href="<%= products_tool_path(:id=>8) %>"><img src="/products/tools/index/lhvl32.png" alt="LHVL32 - Coil Auto Feed"></a>
+  <%= link_to "LHVL32 - Coil Auto Feed", products_tool_path(:id=>8) %>
+</div>
+
+<div class="selection tool">
+  <a href="<%= products_tool_path(:id=>9) %>"><img src="/products/tools/index/vl62.png" alt="VL62 - Series of Tools"></a>
+  <%= link_to "VL62 - Series of Tools", products_tool_path(:id=>9) %>
 </div>
 
 
