--- a/app/views/products/tools/show.html.erb
+++ b/app/views/products/tools/show.html.erb
@@ -2,7 +2,7 @@
 <h1><%= @tool.product_code %> - <%= @tool.name %></h1>
   <section class="left">
 
-    <img id="zoom_01" class="main" src="/products/tools/ultra-driver/ultra-driver-main.png" data-zoom-image="/products/tools/ultra-driver/ultra-driver-main-large.png"/>
+    <img id="zoom_01" class="main" <%= raw @tool.main_picture %>/>
 
   </section>
 
@@ -16,128 +16,59 @@
         <h3>APPLICATIONS</h3>
         <p>Here are some of the recommended applications to use with the <%= @tool.name %>:</p>
         <ul>
-          <%= raw @tool.highlights %>
+          <%= raw @tool.applications %>
         </ul>
       </div>
 
       <div class="detail-box" id="tabs">
-        <ul class="tabs group">
-          <li class="no-margin-left"><a href="#features">FEATURES</a></li>
-          <li><a href="#specifications">SPECIFICATIONS</a></li>
-          <li><a href="#accessories">ACCESSORIES</a></li>
-          <li><a href="#driver-bits">DRIVER BITS</a></li>
-        </ul>
+        <% if @tool.models %>
+          <ul class="tabs group">
+        <% else %>
+          <ul class="tabs four group">
+        <% end %>
+            <li class="no-margin-left"><a href="#features">FEATURES</a></li>
+            <li><a href="#specifications">SPECIFICATIONS</a></li>
+          <% if @tool.models %>
+            <li><a href="#models">MODELS</a></li>
+          <% end %>
+            <li><a href="#accessories">ACCESSORIES</a></li>
+            <li><a href="#driver-bits">DRIVER BITS</a></li>
+          </ul>
 
         <div id="features">
-        <ul class="bullet">
-          <li>Adjustable depth control for repeatable countersinking.</li>
-          <li>Rubber nose piece prevents damage to work surface.</li>
-          <li>Lightweight.</li>
-          <li>No more dropped or lost screws.</li>
-          <li>Ergonomically friendly - work standing up.</li>
-          <li>No predrilling.</li>
-          <li>Housing can be easily rotated for access into tight spaces.</li>
-        </ul>
+          <ul class="bullet">
+            <%= raw @tool.features %>
+          </ul>
 
         </div>
 
         <div id="specifications">
           <table>
-            <tr>
-              <td>Motor options :</td>
-              <td>Makita</td>
-              <td>Makita</td>
-              <td>Dewalt</td>
-              <td>Milwaukee</td>
-              <td>Sioux</td>
-            </tr>
-            <tr>
-              <td>Model :</td>
-              <td>6823N</td>
-              <td>6824N</td>
-              <td>276</td>
-              <td>6702</td>
-              <td>2P2303A</td>
-            </tr>
-            <tr>
-              <td>Speed :</td>
-              <td>2500 RPM</td>
-              <td>4500 RPM</td>
-              <td>2500 RPM</td>
-              <td>2500 RPM</td>
-              <td>2500 RPM</td>
-            </tr>
-            <tr>
-              <td>Current</td>
-              <td>6.5A</td>
-              <td>6.5A</td>
-              <td>6.5A</td>
-              <td>6.5A</td>
-              <td>N/A</td>
-            </tr>
-            <tr>
-              <td>Volts :</td>
-              <td>120 V</td>
-              <td>120 V</td>
-              <td>120 V</td>
-              <td>120 V</td>
-              <td>N/A</td>
-            </tr>
-            <tr>
-              <td>Air pressure :</td>
-              <td>N/A</td>
-              <td>N/A</td>
-              <td>N/A</td>
-              <td>90PSIG</td>
-              <td>N/A</td>
-            </tr>
+            <%= raw @tool.specifications %>
           </table>
 
           <ul>
-            <li>CH7390 drives 1-1/2" to 3" screws - General Purpose tool</li>
-            <li>CH7390SF drives 1-1/2" to 2" screws - specific for sub floor applications provides a shorter stroke making it the fastest sub floor system on the market - Developed for the Professional.</li>
-            <li>CH7390SW drives 1-5/8" to 2" screws - designed for slotted wall systems
-            Reversible</li>
-            <li>Durable housing made from Glass filled reinforced nylon.</li>
-            <li>Nickel plated screw guides for extended wear</li>
-            <li>30 screws per strip</li>
-            <li>Can accommodate either pneumatic or electric drive systems.
-            1 year Warranty</li>
+            <%= raw @tool.extra_specs %>
           </ul>
-
-
-
         </div>
+
+        <% if @tool.models %>
+          <div id="models">
+            <h3>Models:</h3>
+            <table>
+              <%= raw @tool.models %>
+            </table>
+          </div>
+        <% end %>
 
         <div id="accessories">
           <ul class="bullet">
-            <li> Extension T handle - fully adjustable, allows for standing operation, no more back pain.</li>
-            <li>Padded carry bag</li>
-            <li>Double ended bits - that change quickly, no tools needed.</li>
-            <li>Screw pouch clips to your belt for a convienient supply of screw strips.</li>
+            <%= raw @tool.accessories %>
           </ul>
         </div>
 
         <div id="driver-bits">
-          <h4>Double Ended - Last Twice As Long</h4>
-          <table>
-            <tr class="bold">
-              <td>Part Number</td>
-              <td>Description</td>
-            </tr>
-            <tr>
-              <td>PHL28118</td>
-              <td>Phillips #2 Recess</td>
-            </tr>
-            <tr>
-              <td>SQR28118</td>
-              <td>Square #2 Recess</td>
-            </tr>
-            <tr>
-              <td>SQR18118</td>
-              <td>Square # 1 Recess</td>
-            </tr>
-          </table>
+          <%= raw @tool.driver_bits %>
         </div>
       </div>
   </section>
