--- a/app/views/products/tools/index.html.erb
+++ b/app/views/products/tools/index.html.erb
@@ -3,7 +3,7 @@
   <p>Below are the Auto-Feed Tools exclusively made by Muro North America. Click on a tool below for details.</p>
 
 <div class="selection tool">
-  <a href="<%= products_tool_path(:id=>1) %>"><img src="/products/tools/index/ultra-driver.png" alt="CH7390 - Ultra Driver"></a>
+  <a href="<%= products_tools_tool_path(:id=>1) %>"><img src="/products/tools/index/ultra-driver.png" alt="CH7390 - Ultra Driver"></a>
   <%= link_to "CH7390 - Ultra Driver", products_tool_path(:id=>1) %>
 </div>
 
