Updated About section and main logo.

--- a/app/views/about/muro_north_america.html.erb
+++ b/app/views/about/muro_north_america.html.erb
@@ -1,4 +1,4 @@
-<h2 class="heading muro-font">MURO NORTH AMERICA</h2>
+<h2 class="heading muro-font">MURO NORTH AMERICA INC.</h2>
 <img src="muro_building.jpg" alt="Muro North America Building in Brampton, Ontario">
 
 <div class="muro-about">
