Updated products section as per Victors request.

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -31,6 +31,10 @@
 		font-family: 'Helvetica-Bold';
 	}
 
+	p strong {
+		font-family: 'Helvetica-Bold';
+	}
+
 
 	/* Layout Styles */
 
@@ -275,7 +279,7 @@
 	}
 
 	nav.main ul li.customer-service a.two-line {
-		padding: 8px 0 4px;
+		padding: 8px 0 2px;
 	}
 
 	nav.main ul li a:hover {
