--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -58,6 +58,28 @@ section.right > div {
   margin-top: 50px;
 }
 
+.see_more_button {
+  margin-top: 20px;
+  border-radius: 10px;
+  background: $darkgrey;
+  padding: 15px 0px 10px;
+
+  h3 {
+    color: white;
+    text-align: center;
+  }
+
+  &:hover {
+    background: #2d2d2d;
+
+    h3 {
+      color: $green;
+    }
+  }
+}
+
+
+
 div.applications ul {
   list-style-type: disc;
   width: 96%;
@@ -103,7 +125,7 @@ div.applications ul li {
 
 .detail-box table {
   border: none;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   width: 100%;
 }
 
@@ -122,6 +144,13 @@ tr.separator td {
 
 .detail-box h4 {
   margin-bottom: 15px;
+}
+
+.rowspan, .colspan {
+  font-family: 'Helvetica-Bold';
+  text-align: center;
+  vertical-align: middle;
+  font-size: 1.3em;
 }
 
 ul.tabs li {
@@ -156,6 +185,18 @@ ul.tabs li:link {
   background: #2d2d2d;
   font-weight: normal;
   color: #212121;
+}
+
+.zoom-header {
+  font-size: 1em;
+  font-family: 'Helvetica-Bold', Arial;
+  padding-top: .5em;
+}
+
+.compatible_screws {
+  p {
+    margin-top: 1em;
+  }
 }
 
 
