Multiple changes made to the applications pages.

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -19,6 +19,10 @@
 		margin-top: 0 !important;
 	}
 
+	.move-up {
+		margin-top: -50px;
+	}
+
 	.clear {
 		clear: both;
 	}
@@ -360,9 +364,9 @@
 		text-align: center;
 		display: block;
 		font-family: 'Helvetica-Black';
-		letter-spacing: -2px;
+		letter-spacing: -1px;
 		text-transform: uppercase;
-		font-size: 1.3em;
+		font-size: 1.2em;
 		line-height: 120%;
 	}
 }
