--- a/app/views/applications/commercial_roofing.html.erb
+++ b/app/views/applications/commercial_roofing.html.erb
@@ -3,7 +3,7 @@
 <section class="main-section group">
   <img class="main-pic" src="/applications/roofing/commercial-roofing.png" alt="Residential roofing Muro tools application">
   <div class="description">
-    <h3 class="catch-phrase">Roofing will never be the same on your job-site
+    <h3 class="catch-phrase">Roofing will never be the same
 with our Auto Feed Screw Driving systems at your disposal.</h3>
       <ul class="highlights">
         <li>Perfect for roof stitching or screwing down metal industrial / commercial roofs on steel beams.</li>
@@ -18,10 +18,10 @@ with our Auto Feed Screw Driving systems at your disposal.</h3>
 <section class="tools-for-job group">
   <h3>Tools For The Job</h3>
   <article>
-    <a href=""><img src="/applications/roofing/commercial/ch7260.png" alt="Ultra Driver Auto Feed Screw Driver"></a>
+    <a href=""><img src="/applications/roofing/ch7260.png" alt="Ultra Driver Auto Feed Screw Driver"></a>
     <div>
       <h4><a href="">CH7260 - Metal Pro Tool</a></h4>
-      <p>A tool to drive 5/16” hex head screws, all while standing up and not touching every screw, the evolution continues. <strong><a href="">Find out more.</a></strong></p>
+      <p>Tool designed for a variety of #10 &amp; #12 diameter fasteners. Forget about working bent over, stand up for any job! <strong><a href="">Find out more.</a></strong></p>
     </div>
   </article>
 
@@ -30,7 +30,7 @@ with our Auto Feed Screw Driving systems at your disposal.</h3>
     <div>
       <h4><a href="">CH7271WU</a></h4>
       <p>
-A tool to drive Pan Head stitching screws, all while walking no need to handle every screw. <strong><a href="">Find out more.</a></strong></p>
+Tool to drive pan head stitching screws - up to #10 diameter. Yes, even while standing up. <strong><a href="">Find out more.</a></strong></p>
     </div>
   </article>
 
@@ -39,16 +39,16 @@ A tool to drive Pan Head stitching screws, all while walking no need to handle e
     <div>
       <h4><a href="">LHVL32</a></h4>
       <p>
-System designed to drive hex head screws with rubber washers, helps you get it covered in record time. <strong><a href="">Find out more.</a></strong></p>
+System to drive hex head screws with rubber washers. Perfect for metal clading. <strong><a href="">Find out more.</a></strong></p>
     </div>
   </article>
 
    <article>
-    <a href=""><img src="/applications/roofing/commercial/nothing.png" alt="SHVL62 Auto Feed Screw Driver "></a>
+    <a href=""><img src="/applications/roofing/shvl62.png" alt="SHVL62 Auto Feed Screw Driver "></a>
     <div>
       <h4><a href="">SHVL62</a></h4>
       <p>
-Need a description here. This product still needs a description and a picture. Placeholder Text and picture for right nowfor right now... <strong><a href="">Find out more.</a></strong></p>
+Created for those larger roofing jobs (75 screws per coil). Handles a variety of screws, with or without rubber washers. <strong><a href="">Find out more.</a></strong></p>
     </div>
   </article>
 
