--- a/app/views/applications/drywall.html.erb
+++ b/app/views/applications/drywall.html.erb
@@ -3,7 +3,7 @@
 <section class="main-section group">
 	<img class="main-pic" src="/applications/drywall/drywall-main.png" alt="Drywall Muro tools application">
 	<div class="description">
-		<h3 class="catch-phrase">The easiest and most hassle free way to fasten drywall. 
+		<h3 class="catch-phrase">The easiest and most hassle free way to fasten drywall.
 Once you try it you’ll never go back.</h3>
 			<ul class="highlights">
 				<li>Fasten drywall faster and more accurately than ever before.</li>
@@ -21,16 +21,25 @@ Once you try it you’ll never go back.</h3>
 		<a href=""><img src="/applications/drywall/easy-driver.png" alt="Easy Driver Auto Feed Screw Driver"></a>
 		<div>
 			<h4><a href="">CH7241 - Easy Driver</a></h4>
-			<p>The Easy Driver lives up to its name versatile and lightweight, easily handles any drywall job…
+			<p>Muro's strip feed drywall system for wood or metal studs - it's all the same... Easy! Counter sunk heads - perfect every time. Turns everyone into a pro!
 <strong><a href="">Find out more.</a></strong></p>
 		</div>
 	</article>
+
 	<article>
 		<a href=""><img src="/applications/drywall/coil-hex-auto.png" alt="Coil Hex Auto Feed System"></a>
 		<div>
-			<h4><a href="">LWVL32 - Coil Hex Auto 
-Feed System</a></h4>
-			<p>Dual-speed screw driver for maxiumum versatility. The LWVL32 fastens drywall boards efficiently – 150 screws per coil.  Location of tool motor provides good balance & one hand operation. <strong><a href="">Find out more.</a></strong></p>
+			<h4><a href="">LWVL32 - Coil Hex Auto Feed System</a></h4>
+			<p>Dual-speed screw driver for maximum versatility. The LWVL32 fastens drywall boards simply and easily. Location of tool motor provides good balance &amp; one hand operation. <strong><a href="">Find out more.</a></strong></p>
 		</div>
 	</article>
+
+	<article>
+		<a href=""><img src="/applications/drywall/ch7241de.png" alt="Coil Hex Auto Feed System"></a>
+		<div>
+			<h4><a href="">CH7241DE - Drywall Tool</a></h4>
+			<p>Great for wood or metal stud jobs. All done without cords. <br><strong><a href="">Find out more.</a></strong></p>
+		</div>
+	</article>
+
 </section>
