--- a/app/views/applications/flooring.html.erb
+++ b/app/views/applications/flooring.html.erb
@@ -24,7 +24,7 @@ and underlayment with ease.
 		<a href=""><img src="/applications/flooring/speed-driver.png" alt="Speed Driver Auto Feed Screw Driver with Handle"></a>
 		<div>
 			<h4><a href="">FDVL41 - Speed Driver</a></h4>
-			<p>The dream tool for fastening subflooring that truly stands on it's own. Ergonomically friendly - no more reaching for every single screw or working on your hands & knees.  Just load the screws once and go.
+			<p>Purpose built, industrial strength coil feed system for the discriminating contractor. 150 screws per coil, largest payload in the industry. Stands up to any job thrown at it.
 <strong><a href="">Find out more.</a></strong></p>
 		</div>
 	</article>
@@ -33,8 +33,7 @@ and underlayment with ease.
 		<div>
 			<h4><a href="">CH7392SF - Ultra Pro Screwdriver
 </a></h4>
-			<p>A lightning fast alternative
-(4000 rpm motor) rivals the speed of nailing while providing significantly greater job quality and satisfaction for everyone.<strong><a href=""> Find out more.</a></strong></p>
+			<p>The lighter-weight strip feed alternative. Ergonomically friendly and drives screws in a flash. 4000 rpm model for flooring.<br>x<strong><a href=""> Find out more.</a></strong></p>
 		</div>
 	</article>
 
