--- a/app/views/applications/trailer_bus_rv.html.erb
+++ b/app/views/applications/trailer_bus_rv.html.erb
@@ -3,19 +3,19 @@
 <section class="main-section group">
 	<img class="main-pic" src="/applications/trailer/trailer-main.png" alt="trailer Muro tools application">
 	<div class="description">
-		<h3 class="catch-phrase">The proven solution for truck, RV and bus manufacturing. 
-Fasten down your floors and walls without a hitch.
-</h3>
+		<h3 class="catch-phrase">The proven solution for truck body, RV, trailer and bus manufacturing.
+		Fasten down your floors and side walls
+		without a hitch.</h3>
 			<ul class="highlights">
 				<li>Our tools actually work, provide consistent installations each and every time. </li>
-				<li>Sold worldwide to major manufacturers
-</li>
-				<li>The savings on labour are undeniable, Muro Auto-Feed systems have set a new standard.</li>
+				<li>Sold worldwide to major manufacturers.</li>
+				<li>The savings are undeniable, Muro Auto-Feed systems have set a new standard.</li>
 				<li>Forget about getting on your hands and knees, work while standing up.</li>
-				<li>We have a tool for every application, light or heavy duty.
-</li>
+				<li>Purpose built tools for light or heavy duty applications.</li>
 			</ul>
 	</div>
+
+	<img class="move-up" src="/applications/trailer/natm.png" alt="Muro is recognized by the National Association of Trailer Manufacturers.">
 
 </section>
 
@@ -25,16 +25,16 @@ Fasten down your floors and walls without a hitch.
 		<a href=""><img src="/applications/trailer/power-driver.png" alt="Power Driver Auto Feed Screw Driver with Handle"></a>
 		<div>
 			<h4><a href="">FLVL41 - Power Driver</a></h4>
-			<p>The go to tool for lighter gauge steel and aluminum trailer, RV or bus flooring. You don’t have to worry about getting on your knees with the Power Driver ever again. Work while walking around and get the job done sooner than ever before. 
+			<p>Tool for securing lighter gauge floors (wood to steel or aluminum). Purpose built coil feed system for OEM's. No one else compares.
 <strong><a href="">Find out more.</a></strong></p>
 		</div>
 	</article>
 	<article>
 		<a href=""><img src="/applications/trailer/heavy-duty-driver.png" alt="Heavy Duty Driver Auto Feed Screw Driver with Handle"></a>
 		<div>
-			<h4><a href="">HDVL71 - Heavy Duty Driver 
+			<h4><a href="">HDVL71 - Heavy Duty Driver
 </a></h4>
-			<p>The Heavy Duty driver handles the toughest jobs when fastening down your floors. This tool has the potential to save you time and money on all your future projects to come.<strong><a href=""> Find out more.</a></strong></p>
+			<p>Tailor made solution for securing heavy gauge floors (wood to steel or aluminum). The heaviest duty system on the market. 100 screws per coil. No one else compares. <strong><a href=""> Find out more.</a></strong></p>
 		</div>
 	</article>
 	<article>
@@ -42,7 +42,7 @@ Fasten down your floors and walls without a hitch.
 		<div>
 			<h4><a href="">CH7260 - Wall Skinning
 </a></h4>
-			<p>This tool coupled with our wall skinning screw provides a unique solution for wall fabrication. 
+			<p>This tool coupled with our wall skinning screw provides a unique solution for wall fabrication.
 <strong><a href=""> Find out more.</a></strong></p>
 		</div>
 	</article>
