--- a/app/views/applications/residential_roofing.html.erb
+++ b/app/views/applications/residential_roofing.html.erb
@@ -3,16 +3,12 @@
 <section class="main-section group">
   <img class="main-pic" src="/applications/roofing/residential/residential-roofing-main.png" alt="Residential roofing Muro tools application">
   <div class="description">
-    <h3 class="catch-phrase">Roofing will never be the same on your job-site
-with our Auto Feed Screw Driving systems at your disposal.</h3>
+    <h3 class="catch-phrase">Roofing will never be the same with our Auto Feed
+Screw Driving systems at your disposal.</h3>
       <ul class="highlights">
-        <li>Fasten high-end clay tile roofs more effectively than you ever thought possible.</li>
-        <li>You can relax without reaching for single screws when working on complex sloped roofs.</li>
-        
-
-
-
-
+        <li>Fasten tile or metal roofs more effectively than you ever thought possible.</li>
+        <li>You can relax without having to reach for single screws when working on complex sloped roofs.</li>
+        <li>Finish jobs faster using Muro’s collated systems.</li>
       </ul>
   </div>
 </section>
@@ -20,20 +16,33 @@ with our Auto Feed Screw Driving systems at your disposal.</h3>
 <section class="tools-for-job group">
   <h3>Tools For The Job</h3>
   <article>
-    <a href=""><img src="/applications/roofing/residential/ultra-driver.png" alt="Ultra Driver Auto Feed Screw Driver"></a>
+    <a href="<%= products_tool_path(:id=>1) %>"><img src="/applications/roofing/residential/ultra-driver.png" alt="Ultra Driver Auto Feed Screw Driver"></a>
     <div>
-      <h4><a href="">CH7390 - Ultra Driver</a></h4>
-      <p>Strip feed system to screw and hold clay tiles in place for years to come.<strong><a href="">Find out more.</a></strong></p>
+      <h4><a href="<%= products_tool_path(:id=>1) %>">CH7390 - Ultra Driver</a></h4>
+      <p>The lighter-weight strip feed alternative. Ergonomically friendly, drives screws in a flash. Perfect for securing tile roofs. <strong><a href="<%= products_tool_path(:id=>1) %>">Find out more.</a></strong></p>
     </div>
   </article>
   <article>
     <a href=""><img src="/applications/roofing/residential/lpvl62.png" alt="LPVL62 Auto Feed System"></a>
     <div>
-
-
       <h4><a href="">LPVL62 - Auto Feed Screw Driver</a></h4>
-      <p>
-Coil feed system (150 screws per coil) helps cover the largest jobs fast. <strong><a href="">Find out more.</a></strong></p>
+      <p>Purpose built coil feed system for the tile roof contractor. Highest payload - 150 screws per coil. Able to handle any tile job. <br><strong><a href="">Find out more.</a></strong></p>
+    </div>
+  </article>
+
+  <article>
+    <a href=""><img src="/applications/roofing/shvl62.png" alt="SHVL62 Auto Feed System"></a>
+    <div>
+      <h4><a href="">SHVL62</a></h4>
+      <p>Created for those larger roofing jobs (75 screws per coil). Handles a variety of screws, with or without rubber washers. <br><strong><a href="">Find out more.</a></strong></p>
+    </div>
+  </article>
+
+  <article>
+    <a href=""><img src="/applications/roofing/ch7260.png" alt="CH7260 Auto Feed System"></a>
+    <div>
+      <h4><a href="">CH7260 - Metal Pro Tool</a></h4>
+      <p>A tool to drive 5/16” hex head screws, all while standing up and not touching every screw, the evolution continues. <br><strong><a href="">Find out more.</a></strong></p>
     </div>
   </article>
 </section>
