--- a/app/assets/stylesheets/products/screws.scss
+++ b/app/assets/stylesheets/products/screws.scss
@@ -20,9 +20,21 @@
     color: black;
     font-family: Helvetica-Roman, Arial;
   }
+
+  h3 {
+    text-decoration: underline;
+    font-family: Helvetica-Roman;
+    color: black;
+    margin-bottom: 0.5em;
+  }
+
   img {
     margin: 30px 0;
     border: 1px solid #ccc;
+  }
+
+  .other-model {
+    margin-top: 30px;
   }
 }
 
