Making more changes and adding more screws to screws pages.

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -23,6 +23,17 @@
 		margin-top: -50px;
 	}
 
+	.go-back {
+	  margin:0px 0 40px !important;
+		color: white;
+	  width: 150px !important;
+	  text-align: center;
+		h3 {
+			font-family: Helvetica-Bold;
+		}
+
+	}
+
 	.clear {
 		clear: both;
 	}
