--- a/app/views/products/screws/show.html.erb
+++ b/app/views/products/screws/show.html.erb
@@ -1,3 +1,10 @@
+<%= link_to products_screws_path do %>
+      <div class="see_more_button go-back">
+        <h3>Back to Screws</h3>
+      </div>
+    <% end %>
+
+
 <div class="product">
   <h1><%= @tool.product_code %> <%= @tool.name %> - Screws</h1>
 
