--- a/app/views/products/tools/show.html.erb
+++ b/app/views/products/tools/show.html.erb
@@ -1,3 +1,9 @@
+<%= link_to products_tools_path do %>
+  <div class="see_more_button go-back">
+    <h3>Back to Tools</h3>
+  </div>
+<% end %>
+
 <div class="product">
 <h1><%= @tool.product_code %> - <%= @tool.name %></h1>
   <section class="left">
