--- a/app/assets/stylesheets/products/screws.scss
+++ b/app/assets/stylesheets/products/screws.scss
@@ -14,6 +14,9 @@
 
 .screw {
 
+  width: 105%;
+  margin-left: -2.5%;
+
   h2 {
     margin: 80px 0 0;
     font-size: 1.5em;
@@ -39,9 +42,9 @@
 }
 
 .screw-table {
-  width: 100%;
   text-align: center;
-  font-size: .85em;
+  font-size: .8em;
+  width: 100%;
 
   .diameter {
     float: left;
@@ -87,7 +90,7 @@
   td {
     border-bottom: #ccc 1px solid;
     vertical-align: center;
-    padding: 15px 0 10px;
+    padding: 15px 2px 10px;
   }
 
   td:nth-child(odd) {
